--- a/index.html
+++ b/index.html
@@ -211,17 +211,17 @@
     </div>
 
     <div class="row mt-1 iconicon">
-      <div class="col-2">
-       <a href=""> <img src="img/whatsapp.png" width="20px"> </a>
+      <div class="col-12">
+       <a href=""> <img src="img/whatsapp.png" width="20px"> 08782049497012</a>
       </div>
-      <div class="col-2">
-        <a href=""> <img src="img/instagram.png" width="20px"> </a>
+      <div class="col-12">
+        <a href="https://instagram.com/derby-footwear?igshid=16ljh5abyj6nu"> <img src="img/instagram.png" width="20px"> @Derby_footwear </a>
       </div>
-      <div class="col-2">
-       <a href=""> <img src="img/facebook.png" width="20px"> </a> 
+      <div class="col-12">
+       <a href=""> <img src="img/facebook.png" width="20px"> Derby_footwear </a> 
       </div>
-      <div class="col-2">
-       <a href=""> <img src="img/gmail.png" width="20px"> </a>
+      <div class="col-12">
+       <a href=""> <img src="img/gmail.png" width="20px"> derbyfootwear@gmail.com </a>
       </div>
     </div>
   </div>
