--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
         <img src="img/display1.jpg" class="d-block w-100" alt="...">
       </div>
          <div class="carousel-item">
-        <img src="img/display2.jpg" class="d-block w-100" alt="...">
+        <img src="img/img1.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/display3.jpg" class="d-block w-100" alt="...">
+        <img src="img/img2.png" class="d-block w-100" alt="...">
       </div>
        <div class="carousel-item">
-        <img src="img/display4.jpg" class="d-block w-100" alt="...">
+        <img src="img/img3.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/display5.jpg" class="d-block w-100" alt="...">
+        <img src="img/img4.png" class="d-block w-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
