menambahkan barang di catalog

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
  <div class="col mt-3">
       <div class="card" style="width: 16rem;">
-        <img src="img/display1.jpg" class="card-img-top" alt="...">
+        <img src="img/catalog1.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
         </div>
@@ -187,12 +187,31 @@
 
    <div class="col mt-3">
       <div class="card" style="width: 16rem;">
-        <img src="img/display6.jpg" class="card-img-top" alt="...">
+        <img src="img/catalog2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
         </div>
       </div>
     </div>
+
+ <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+   <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog4.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
 
   </div>
 
