memasukan gmbar catalog

--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
         <img src="img/display.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/display1.jpg" class="d-block w-100" alt="...">
-      </div>
-         <div class="carousel-item">
         <img src="img/img1.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
@@ -211,6 +208,97 @@
         </div>
       </div>
     </div>
+
+
+
+
+
+<div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog5.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+ <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog6.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+   <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog7.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+ <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog8.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+   <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog9.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+<div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog10.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+   <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog11.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+ <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog12.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+   <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/catalog13.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+        </div>
+      </div>
+    </div>
+
+
 
 
   </div>
