menambahkan product pada catalog

--- a/index.html
+++ b/index.html
@@ -126,27 +126,84 @@
 
     <div class="col mt-3">
       <div class="card" style="width: 16rem;">
-        <img src="img/display3.jpg" class="card-img-top" alt="...">
+        <img src="img/shoesctg1.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : VANS <br> Type : SK8 <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	     	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: D.Brown Gundongan</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Dalmo</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
 
  <div class="col mt-3">
       <div class="card" style="width: 16rem;">
-        <img src="img/display2.jpg" class="card-img-top" alt="...">
+        <img src="img/shoesctg2.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : VANS <br> Type : OldSchool <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	     	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: wd.BW Shancez</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Word Division</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
 
  <div class="col mt-3">
       <div class="card" style="width: 16rem;">
-        <img src="img/display4.jpg" class="card-img-top" alt="...">
+        <img src="img/shoesctg3.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : VANS <br> Type : Authentic <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	     	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: wd.OnBw Silva</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Word Division</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -168,7 +225,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/display.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Black Toure</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -177,7 +253,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog1.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	 <table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Brown DeGea</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -186,7 +281,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	          	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Brown Bruyne </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -195,7 +309,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog3.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Black Martial</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -204,7 +337,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog4.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Dark C Gabriel </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -217,7 +369,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog5.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Camel Mata </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -226,16 +397,54 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog6.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Rust Walker </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
 
    <div class="col mt-3">
       <div class="card" style="width: 16rem;">
-        <img src="img/catalog7.jpg" class="card-img-top" alt="...">
+        <img src="img/catalog7.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	 <table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: White Shaw </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -244,7 +453,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog8.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Red Sane </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -253,7 +481,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog9.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Dark C Pogba </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -266,16 +513,54 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog10.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Black Mendy </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
 
    <div class="col mt-3">
       <div class="card" style="width: 16rem;">
-        <img src="img/catalog11.jpg" class="card-img-top" alt="...">
+        <img src="img/catalog11.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Beige Rashford </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -284,7 +569,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog12.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Cream Stone  </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
@@ -293,7 +597,26 @@
       <div class="card" style="width: 16rem;">
         <img src="img/catalog13.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Brand : FILOSOFI <br> Type : Puyuh <br> size : 39,40,41,42</p>
+          <p class="card-text">
+          	          	       	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: Beige Lingard </td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Philosopy</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.120.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
         </div>
       </div>
     </div>
