menambahkan product shoes

--- a/index.html
+++ b/index.html
@@ -208,6 +208,63 @@
       </div>
     </div>
 
+<div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/shoesctg4.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">
+          	     	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: wd.BW Lukaku</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Word Division</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.400.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col mt-3">
+      <div class="card" style="width: 16rem;">
+        <img src="img/shoesctg5.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">
+          	     	<table>
+          		<tr>
+          			<td>Code </td>
+          			<td>: wd.Bw Sterling</td>
+          		</tr>
+          		<tr>
+          			<td>Brand </td>
+          			<td>: Word Division</td>
+          		</tr>
+          		<tr>
+          			<td>Price </td>
+          			<td>: Rp.400.000</td>
+          		</tr>
+          		<tr>
+          			<td>Size </td>
+          			<td>: 36,37,38,39,40,41</td>
+          		</tr>
+          	</table>
+          </p>
+        </div>
+      </div>
+    </div>
+
+
   </div>
   <!-- shoes -->
 
