mengubah harga dan memberikan link pada navbar

--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#display">Display</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggler" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
+            Catalog
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#shoes">Shoes</a>
+            <a class="dropdown-item" href="#slippers">Slippers</a>
           </div>
         </li>
       </ul>
@@ -59,8 +58,21 @@
 </div>
 <!-- jumbotron -->
 
-<!-- display -->
 <div class="container">
+	<div class="row" id="about">
+		<div class="col">
+			<h1 class="text-center">ABOUT</h1>
+		</div>
+	</div>
+	<div class="row mb-5">
+	  <div class="col">
+		<p>Kami akan memberikan pelayanan yang baik bagi customer, menjaga kualitas dari produk dan memberikan kepuasan bagi customer. karna bagi kami hal terpenting adalah menjaga kepercayaan customer pada bisnis kami. </p>
+	  </div>
+	</div>
+</div>
+
+<!-- display -->
+<div class="container" id="display">
   <div class="row">
     <div class="col">
       <h1 class="text-center display">DISPLAY</h1>
@@ -108,14 +120,14 @@
 <!-- catalog -->
 <div class="container">
 
-  <div class="row mt-3">
+  <div class="row mt-3" id="catalog">
     <div class="col">
       <h1 class="text-center display">CATALOG</h1>
     </div>
   </div>
 
 <!-- shoes -->
-  <div class="row mt-3">
+  <div class="row mt-3" id="shoes">
     <div class="col Shoes">
       <h3>Shoes</h3>
       <br>
@@ -144,7 +156,7 @@
           		</tr>
           		<tr>
           			<td>Size </td>
-          			<td>: 36,37,38,39,40,41</td>
+          			<td>: 38,39,40,41</td>
           		</tr>
           	</table>
           </p>
@@ -172,7 +184,7 @@
           		</tr>
           		<tr>
           			<td>Size </td>
-          			<td>: 36,37,38,39,40,41</td>
+          			<td>: 38,39,40,41</td>
           		</tr>
           	</table>
           </p>
@@ -200,7 +212,7 @@
           		</tr>
           		<tr>
           			<td>Size </td>
-          			<td>: 36,37,38,39,40,41</td>
+          			<td>: 38,39,40,41</td>
           		</tr>
           	</table>
           </p>
@@ -228,7 +240,7 @@
           		</tr>
           		<tr>
           			<td>Size </td>
-          			<td>: 36,37,38,39,40,41</td>
+          			<td>: 38,39,40,41</td>
           		</tr>
           	</table>
           </p>
@@ -256,7 +268,7 @@
           		</tr>
           		<tr>
           			<td>Size </td>
-          			<td>: 36,37,38,39,40,41</td>
+          			<td>: 38,39,40,41</td>
           		</tr>
           	</table>
           </p>
@@ -269,7 +281,7 @@
   <!-- shoes -->
 
 <!-- slippers -->
-  <div class="row mt-5">
+  <div class="row mt-5 " id="slippers">
     <div class="col Shoes">
       <h3>Slippers</h3>
       <br>
@@ -689,7 +701,7 @@
 <!-- final catalog -->
 
 <footer>
-  <div class="container">
+  <div class="container foter">
 
     <div class="row mt-5 pt-3">
       <div class="col text-center">
