--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <!-- jumbotron -->
 
 <div class="container">
-	<div class="row" id="about">
+	<div class="row about" id="about">
 		<div class="col">
 			<h1 class="text-center">ABOUT</h1>
 		</div>
@@ -701,7 +701,7 @@
 <!-- final catalog -->
 
 <footer>
-  <div class="container foter">
+  <div class="container" id="footer">
 
     <div class="row mt-5 pt-3">
       <div class="col text-center">
@@ -724,11 +724,11 @@
       </div>
     </div>
   </div>
-  <p class="text-center pt-3">
+  <p class="text-center pt-3" class="crdt">
     icon credit from <a href="https://www.flaticon.com/">flaticon</a> 
   </p>
   <p>
-    <p class="text-center">&copy; 2019 Rohmat Hidayat<p>
+    <p class="text-center" class="cpr">&copy; 2019 Rohmat Hidayat<p>
   </p>
 </footer>
 
